--- a/src/templates/includes/_navbar.pug
+++ b/src/templates/includes/_navbar.pug
@@ -7,7 +7,7 @@ nav#navbarEscape.navbar.navbar-escape.navbar-expand-lg.navbar-dark.bg-dark.fixed
     #navbarColor01.collapse.navbar-collapse
       ul.navbar-nav.ml-auto
         if relative
-          +item('INICIO', './')
+          +item('INICIO', '#top')
           +item('IMÁGENES', '#imagenes')
           +item('DÓNDE ESTAMOS', '#donde_estamos')
           +item('PREGUNTAS', '#preguntas')
