--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -5,22 +5,77 @@ include includes/_mixins.pug
 include includes/_header.pug
 
 #mainContent.container-fluid
-    #top.container.p-2.p-sm-5
-        img.float-left.pr-md-4.pb-md-4(src="images/lilith-peq.jpg", alt="")
-        p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus autem nobis ipsum deserunt expedita rerum magni amet ad sapiente iure corrupti accusamus perspiciatis veniam incidunt quasi, ullam provident quae aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum cum neque soluta temporibus ullam illo omnis facilis. Neque fuga deserunt, a assumenda, enim distinctio laboriosam cupiditate ratione blanditiis, soluta officiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus autem nobis ipsum deserunt expedita rerum magni amet ad sapiente iure corrupti accusamus perspiciatis veniam incidunt quasi, ullam provident quae aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum cum neque soluta temporibus ullam illo omnis facilis. Neque fuga deserunt, a assumenda, enim distinctio laboriosam cupiditate ratione blanditiis, soluta officiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus autem nobis ipsum deserunt expedita rerum magni amet ad sapiente iure corrupti accusamus perspiciatis veniam incidunt quasi, ullam provident quae aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum cum neque soluta temporibus ullam illo omnis facilis. Neque fuga deserunt, a assumenda, enim distinctio laboriosam cupiditate ratione blanditiis, soluta officiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus autem nobis ipsum deserunt expedita rerum magni amet ad sapiente iure corrupti accusamus perspiciatis veniam incidunt quasi, ullam provident quae aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum cum neque soluta temporibus ullam illo omnis facilis. Neque fuga deserunt, a assumenda, enim distinctio laboriosam cupiditate ratione blanditiis, soluta officiis?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus autem nobis ipsum deserunt expedita rerum magni amet ad sapiente iure corrupti accusamus perspiciatis veniam incidunt quasi, ullam provident quae aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum cum neque soluta temporibus ullam illo omnis facilis. Neque fuga deserunt, a assumenda, enim distinctio laboriosam cupiditate ratione blanditiis, soluta officiis?
-    
-    #imagenes.container.p-2.p-sm-5
-        img.float-left.pr-md-4.pb-md-4(src="images/harrison-vinilo-peq.jpg", alt="")
-        p Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!
-    
-    #donde_estamos.row(style='background-image: url(images/fondo-escape-cajones-grande.jpg); background-size: cover;')
-        .container.p-2.p-sm-5 Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!
+    #top.row.jumbotron.mb-0.p-2.p-sm-5(style='background-image: url(images/fondo-escape-cajones-grande.jpg); background-size: cover; background-attachment: fixed;')
+        .col-12.py-5.text-center
+            p.pt-5.display-4 ¿Qué es Escape Mania?
+            p.h4 Es una sala de escape en Bilbao.
+            p.h4 Conocida también como escape room o juego de escapismo.
 
-    .container.p-2.p-sm-5 Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!
+    .row.jumbotron.mb-0.p-2.p-sm-5(style='background-color: #0c011d;')
+        .col-12.py-5.text-center
+            p.display-4 ¿Qué es una escape room?
+            p.h4.px-md-5.col-md-6.mx-auto Es un juego para 2-6 personas. Entras en una habitación, debes descubrir un misterio y averiguar cómo salir en 60 minutos.
     
-    #preguntas.row(style='background-image: url(images/foto-juego-4.jpg); background-size: cover;')
-        .container.p-2.p-sm-5 Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus, repudiandae eveniet autem incidunt temporibus ex ea unde voluptatem quidem quasi voluptates voluptas ipsam molestiae veritatis et repellat a quibusdam facere!
+    #imagenes.row.py-1.py-sm-3.color-bg-game-1
+        include includes/_juego1.pug
+    .row.py-1.py-sm-3.color-bg-game-2
+        include includes/_juego2.pug
+    .row.py-1.py-sm-3.color-bg-game-3
+        include includes/_juego3.pug
 
-    .container.p-2.p-sm-5 Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!Lorem ipsum dolor, sit amet consectetur adipisicing elit. In voluptate eum, minima facere rem blanditiis a et necessitatibus aliquam quis, earum itaque neque cupiditate aspernatur voluptatibus at repudiandae! Fugit, error!
+    #donde_estamos.row.py-1.py-sm-3.bg-dark
+        .container
+            h1.text-center.mt-3 ¿Dónde estamos?
+            .col-md-6.mx-auto.alert.alert-danger.text-center.my-4
+                i.fa.fa-exclamation
+                span.alert-heading.font-weight-bold  ATENCIÓN: 
+                span Disponemos de dos locales diferentes.
+
+            p.h4.bg-primary.p-2 JUEGO 1: El misterio de la familia Van Landen
+            p Dirección: c/ Jose Maria Escuza 23, Entr. Dch-Izq – 48013 – Bilbao
+            ul
+                li Cerca de las paradas de metro de Indautxu y San Mamés.
+                li Zona inmejorable para venir a jugar y estar al lado de bares y restaurantes zona Indautxu y Licenciado Poza.
+
+            p.h4.bg-success.p-2.mt-5 JUEGO 2: Harrison Jones en busca del Sexto Elemento
+            p.h4.bg-danger.p-2 JUEGO 3: La tienda de muñecas de Lilith
+            p Dirección: c/ Rafaela Ybarra 7 – 48014 – Bilbao
+            ul
+                li Cerca de la parada de metro de Deusto.
+                li Cerca del paseo de la ría de Bilbao, parque, Guggenheim, etc.
+    
+    #preguntas.row.py-1.py-sm-5
+        .container
+            h1.text-center.mb-4 Preguntas
+            .row
+                .col-md-4
+                    .p-4.bg-primary.h-100
+                        p.h3.mb-3 Qué hay que hacer
+                            i.fa.fa-cog.ml-3
+                        ul
+                            li Mediante vuestro ingenio y habilidad tenéis que conseguir resolver el misterio y salir de la habitación en menos de 60 minutos.
+                            li No se requiere hacer esfuerzo físico.
+                            li Se trata de juegos de ingenio, acertijos, puzzles y enigmas que hay que resolver entre todos.
+                .col-md-4
+                    .p-4.bg-success.h-100
+                        p.h3.mb-3 Para quién es
+                            i.fa.fa-user.ml-3
+                        ul
+                            li Para todos los públicos y todas las edades.
+                            li De 2 a 6 personas máximo.
+                            li Ideal para venir con los amigos, familia o un evento de empresa.
+                            li Algunos acertijos a lo mejor son algo más complicados, por lo que recomendamos que sean niños mayores de 12 años.
+
+                .col-md-4
+                    .p-4.bg-danger.h-100
+                        p.h3.mb-3 Cuánto cuesta
+                            i.fa.fa-euro-sign.ml-3
+                        ul
+                            li JUEGO 1: 60 € por grupo.
+                            li JUEGO 2 y 3: 65 € por grupo.
+                            li Tanto si venís 2 como si venís 5 personas, el precio es por grupo.
+                            li.small * Sólo se aceptan grupos de 6 personas en el JUEGO 1 y 2, se aplica un recargo de + 10 €.
+                            li.small ** No se aceptan grupos de 7, sin excepciones.
+
 
 include includes/_footer.pug
