--- a/src/templates/includes/_footer.pug
+++ b/src/templates/includes/_footer.pug
@@ -1,3 +1,21 @@
 // SCRIPTS
 
+.nav-to-top
+    a.nav-link.btn-dark.btn-sm(href='#top')
+        i.small.fas.fa-arrow-up
+
+.bg-dark
+    .container.py-5.small
+        .row
+            .col-md-6
+                span 2015-2018 - EscapeMania.es © - 
+                a.text-secondary(href="terminos_y_condiciones.html") Términos y condiciones
+            .col-md-6.text-right
+                a.btn.btn-dark.btn-lg.ml-2.p-2.rounded-circle(style='width: 48px;', target='_blank', href='https://www.facebook.com/EscapeMania.es')
+                    i.fab.fa-facebook-f
+                a.btn.btn-dark.btn-lg.ml-2.p-2.rounded-circle(style='width: 48px;', target='_blank', href='https://www.instagram.com/escapemania.es/')
+                    i.fab.fa-instagram
+                a.btn.btn-dark.btn-lg.ml-2.p-2.rounded-circle(style='width: 48px;', target='_blank', href='https://www.tripadvisor.es/Attraction_Review-g187454-d8122180-Reviews-Escape_Mania-Bilbao_Province_of_Vizcaya_Basque_Country.html')
+                    img(src='images/ta.png', alt='')
+
 script(src='js/jsOneFile/scripts.min.js' charset='utf-8')
