--- a/src/templates/includes/_juego3.pug
+++ b/src/templates/includes/_juego3.pug
@@ -1,6 +1,6 @@
 .container
     .row.py-2.py-sm-5
-        .col-md-4 
+        .col-md-4
             img.img-fluid(src="images/lilith-peq.jpg", alt="")
         .col-md-8
             h1.mt-4.mt-md-0 JUEGO 3: La tienda de muñecas de Lilith
@@ -18,6 +18,6 @@
                             i.fa.fa-check
                             span.px-3 CONSULTAR HORARIO Y RESERVAR
                     .col-lg.mt-2.mt-lg-0
-                        a.btn.btn-danger(href='regalar_juego_3.html')
-                            i.fa.fa-gift 
+                        a.btn.btn-danger(href='vale_regalo_3.html')
+                            i.fa.fa-gift
                             span.px-3 REGALAR
