--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,3 @@
-@import "./src/webfonts/css/fontawesome-free-all.scss";
-
 @import "variables";
 
 // Bootrap in parts
@@ -25,8 +23,8 @@
 //@import "./node_modules/bootstrap/scss/card";
 //@import "./node_modules/bootstrap/scss/breadcrumb";
 //@import "./node_modules/bootstrap/scss/pagination";
-@import "./node_modules/bootstrap/scss/badge";
-@import "./node_modules/bootstrap/scss/jumbotron";
+//@import "./node_modules/bootstrap/scss/badge";
+//@import "./node_modules/bootstrap/scss/jumbotron";
 @import "./node_modules/bootstrap/scss/alert";
 //@import "./node_modules/bootstrap/scss/progress";
 //@import "./node_modules/bootstrap/scss/media";
@@ -38,6 +36,8 @@
 //@import "./node_modules/bootstrap/scss/carousel";
 @import "./node_modules/bootstrap/scss/utilities";
 //@import "./node_modules/bootstrap/scss/print";
+
+@import "./src/webfonts/css/fontawesome-free-all.scss";
 
 .nav-to-top {
   position: fixed;
