--- a/src/templates/includes/_juego1.pug
+++ b/src/templates/includes/_juego1.pug
@@ -1,6 +1,6 @@
 .container
     .row.py-2.py-sm-5
-        .col-md-4 
+        .col-md-4
             img.img-fluid(src="images/foto-juego-4.jpg", alt="")
         .col-md-8
             h1.mt-4.mt-md-0 JUEGO 1: El misterio de la familia Van Landen
@@ -16,6 +16,6 @@
                             i.fa.fa-check
                             span.px-3 CONSULTAR HORARIO Y RESERVAR
                     .col-lg.mt-2.mt-lg-0
-                        a.btn.btn-primary(href='regalar_juego_1.html')
-                            i.fa.fa-gift 
+                        a.btn.btn-primary(href='vale_regalo_1.html')
+                            i.fa.fa-gift
                             span.px-3 REGALAR
