--- a/src/templates/includes/_juego2.pug
+++ b/src/templates/includes/_juego2.pug
@@ -1,6 +1,6 @@
 .container
     .row.py-2.py-sm-5
-        .col-md-4 
+        .col-md-4
             img.img-fluid(src="images/harrison-vinilo-peq.jpg", alt="")
         .col-md-8
             h1.mt-4.mt-md-0 JUEGO 2: Harrison Jones en busca del Sexto Elemento
@@ -16,6 +16,6 @@
                             i.fa.fa-check
                             span.px-3 CONSULTAR HORARIO Y RESERVAR
                     .col-lg.mt-2.mt-lg-0
-                        a.btn.btn-success(href='regalar_juego_2.html')
-                            i.fa.fa-gift 
+                        a.btn.btn-success(href='vale_regalo_2.html')
+                            i.fa.fa-gift
                             span.px-3 REGALAR
