--- a/src/templates/includes/_navbar.pug
+++ b/src/templates/includes/_navbar.pug
@@ -14,7 +14,7 @@ nav#navbarEscape.navbar.navbar-escape.navbar-expand-lg.navbar-dark.bg-dark.fixed
           +item('CONTACTAR', './contactar.html')
           +item('VALE REGALO', './vale_regalo.html')
           +item('RESERVAR', './reservar.html')
-          //+item('FAQ', './faq.html')
+          +item('FAQ', './faq.html')
         else
           +item('INICIO', './')
           +item('IMÁGENES', './#imagenes')
@@ -23,4 +23,4 @@ nav#navbarEscape.navbar.navbar-escape.navbar-expand-lg.navbar-dark.bg-dark.fixed
           +item('CONTACTAR', './contactar.html')
           +item('VALE REGALO', './vale_regalo.html')
           +item('RESERVAR', './reservar.html')
-          //+item('FAQ', './faq.html')
+          +item('FAQ', './faq.html')
