--- a/src/templates/contactar.pug
+++ b/src/templates/contactar.pug
@@ -1,3 +1,5 @@
+- title = 'Escape Mania – Sala de escape, escape room en Bilbao - Contactar'
+
 - active = 'CONTACTAR'
 
 include includes/_mixins.pug
