--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -1,3 +1,5 @@
+- title = 'Escape Mania – Sala de escape, escape room en Bilbao'
+
 - active = 'INICIO'
 - relative = true
 
@@ -16,7 +18,7 @@ include includes/_header.pug
             p.display-4 ¿Qué es una escape room?
             p.h4.px-md-5.col-md-6.mx-auto Es un juego para 2-6 personas. Entras en una habitación, debes descubrir un misterio y averiguar cómo salir en 60 minutos.
 
-    #imagenes.row.py-1.py-sm-3.color-bg-game-1
+    #juegos.row.py-1.py-sm-3.color-bg-game-1
         include includes/_juego1.pug
     .row.py-1.py-sm-3.color-bg-game-2
         include includes/_juego2.pug
