--- a/src/templates/vale-regalo-juego-1.pug
+++ b/src/templates/vale-regalo-juego-1.pug
@@ -1,3 +1,5 @@
+- title = 'Escape Mania – Sala de escape, escape room en Bilbao - Vale regalo - juego 1 El misterio de la familia Van Landen'
+
 - active = 'VALE REGALO'
 
 include includes/_mixins.pug
