--- a/src/templates/vale-regalo-juego-3.pug
+++ b/src/templates/vale-regalo-juego-3.pug
@@ -1,3 +1,5 @@
+- title = 'Escape Mania – Sala de escape, escape room en Bilbao - Vale regalo - juego 3 La tienda de muñecas de Lilith'
+
 - active = 'VALE REGALO'
 
 include includes/_mixins.pug
