--- a/src/templates/includes/_juego2.pug
+++ b/src/templates/includes/_juego2.pug
@@ -12,7 +12,7 @@
                 img.mx-1.img-fluid(src="images/flag-english.jpg", alt="Juego disponible en idioma Inglés")
                 .row
                     .col-lg
-                        a.btn.btn-success(href='juego_2.html')
+                        a.btn.btn-success(href='reservar-juego-2.html')
                             i.fa.fa-check
                             span.px-3 CONSULTAR HORARIO Y RESERVAR
                     .col-lg.mt-2.mt-lg-0
