--- a/src/templates/includes/_juego3.pug
+++ b/src/templates/includes/_juego3.pug
@@ -14,7 +14,7 @@
                 span.mx-1.text-white.small (Not available in english)
                 .row
                     .col-lg
-                        a.btn.btn-danger(href='juego_3.html')
+                        a.btn.btn-danger(href='reservar-juego-3.html')
                             i.fa.fa-check
                             span.px-3 CONSULTAR HORARIO Y RESERVAR
                     .col-lg.mt-2.mt-lg-0
