--- a/src/templates/includes/_navbar.pug
+++ b/src/templates/includes/_navbar.pug
@@ -8,19 +8,19 @@ nav#navbarEscape.navbar.navbar-escape.navbar-expand-lg.navbar-dark.bg-dark.fixed
       ul.navbar-nav.ml-auto
         if relative
           +item('INICIO', '#top')
-          +item('IMÁGENES', '#imagenes')
+          +item('JUEGOS', '#juegos')
           +item('DÓNDE ESTAMOS', '#donde_estamos')
           +item('PREGUNTAS', '#preguntas')
           +item('CONTACTAR', './contactar.html')
-          +item('VALE REGALO', './vale_regalo.html')
+          +item('VALE REGALO', './vale-regalo.html')
           +item('RESERVAR', './reservar.html')
           +item('FAQ', './faq.html')
         else
           +item('INICIO', './')
-          +item('IMÁGENES', './#imagenes')
+          +item('JUEGOS', './#juegos')
           +item('DÓNDE ESTAMOS', './#donde_estamos')
           +item('PREGUNTAS', './#preguntas')
           +item('CONTACTAR', './contactar.html')
-          +item('VALE REGALO', './vale_regalo.html')
+          +item('VALE REGALO', './vale-regalo.html')
           +item('RESERVAR', './reservar.html')
           +item('FAQ', './faq.html')
