--- a/src/templates/reservar-juego-1.pug
+++ b/src/templates/reservar-juego-1.pug
@@ -1,17 +1,19 @@
+- title = 'Escape Mania – Sala de escape, escape room en Bilbao - Reservar juego 1 - El misterio de la familia Van Landen'
+
 - active = 'INICIO'
 
 include includes/_mixins.pug
 include includes/_header.pug
 
 #mainContent.container-fluid.mt-5
-    #imagenes.row.pt-1.pt-sm-3.color-bg-game-2
+    #juegos.row.pt-1.pt-sm-3.color-bg-game-1
         .container
             .row.pt-2.pt-sm-5
                 .col-md-4
-                    img.img-fluid(src="images/harrison-vinilo-peq.jpg", alt="")
+                    img.img-fluid(src="images/foto-juego-4.jpg", alt="")
                 .col-md-8
-                    h1.mt-4.mt-md-0 JUEGO 2: Harrison Jones en busca del Sexto Elemento
-                    p Este juego es de una temática con estilo Indiana Jones.
+                    h1.mt-4.mt-md-0 JUEGO 1: El misterio de la familia Van Landen
+                    p Este juego es de una temática con estilo “detective años 30″.
                     p.text-warning 2-5 personas 65€ (6 personas 75€)
                         img.ml-2.mr-1.img-fluid(src="images/flag-spanish.jpg", alt="Juego disponible en idioma Español")
                         img.mx-1.img-fluid(src="images/flag-english.jpg", alt="Juego disponible en idioma Inglés")
@@ -21,11 +23,9 @@ include includes/_header.pug
                         span.alert-heading.font-weight-bold ATENCIÓN:
                         span Tenemos dos locales, este juego está en la dirección:
                     .text-center.mb-2
-                        a.text-white(href='https://goo.gl/maps/AdAByzCoao22') c/ Rafaela Ybarra 7 – 48014 – Bilbao (Vizcaya)
+                        a.text-white(href='https://goo.gl/maps/6X2rRZSF5vL2') c/ Jose María Escuza 23, entreplanta Dcha. Izqda. – 48013 – Bilbao (Vizcaya)
 
-        .container.widget-iframe-content(data-event-id='804ca193' data-app-url='https://www.ticketself.com/' data-event-url='https://www.ticketself.com/event/804ca193?widget=1&hidegift=true')  Compra aqu&iacute; tus entradas
+        .widget-iframe-content.container(data-event-id='417ce822' data-app-url='https://www.ticketself.com/' data-event-url='https://www.ticketself.com/event/417ce822?widget=1&hidegift=true')
         script(type='text/javascript' src='https://www.ticketself.com/assets/default/js/widget-multi-iframe.js')
-
-
 
 include includes/_footer.pug
