--- a/src/templates/reservar.pug
+++ b/src/templates/reservar.pug
@@ -1,3 +1,5 @@
+- title = 'Escape Mania – Sala de escape, escape room en Bilbao - Reservar'
+
 - active = 'RESERVAR'
 
 include includes/_mixins.pug
