--- a/src/templates/vale-regalo-juego-2.pug
+++ b/src/templates/vale-regalo-juego-2.pug
@@ -1,3 +1,5 @@
+- title = 'Escape Mania – Sala de escape, escape room en Bilbao - Vale regalo - juego 2 Harrison Jones en busca del Sexto Elemento'
+
 - active = 'VALE REGALO'
 
 include includes/_mixins.pug
