--- a/src/templates/vale-regalo.pug
+++ b/src/templates/vale-regalo.pug
@@ -1,3 +1,5 @@
+- title = 'Escape Mania – Sala de escape, escape room en Bilbao - Vale regalo'
+
 - active = 'VALE REGALO'
 
 include includes/_mixins.pug
